// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code editor Line builds the expected component 1`] = `
<span
  className="text align-left"
/>
`;

exports[`Code editor Node builds the expected component 1`] = `
<div
  className="text-chunk obojobo-draft--chunks--code pad"
>
  <pre>
    <code />
  </pre>
</div>
`;

exports[`Code editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {},
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "data": Object {
        "content": Object {
          "indent": 1,
        },
      },
      "nodes": Array [
        Object {
          "leaves": undefined,
          "object": "text",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.Code.CodeLine",
    },
    Object {
      "data": Object {
        "content": Object {
          "indent": 0,
        },
      },
      "nodes": Array [
        Object {
          "leaves": undefined,
          "object": "text",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.Code.CodeLine",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`Code editor plugins.renderNode renders a line when passed 1`] = `
<Line
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Code.CodeLine",
    }
  }
/>
`;

exports[`Code editor plugins.renderNode renders code when passed 1`] = `
<Node
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Code",
    }
  }
/>
`;

exports[`Code editor plugins.renderPlaceholder exits when not relevent 1`] = `undefined`;

exports[`Code editor plugins.renderPlaceholder exits when not relevent 2`] = `undefined`;

exports[`Code editor plugins.renderPlaceholder exits when not relevent 3`] = `undefined`;

exports[`Code editor plugins.renderPlaceholder renders a placeholder 1`] = `
<span
  className="placeholder"
  contentEditable={false}
>
  Type Your Code Here
</span>
`;

exports[`Code editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": Object {
          "indent": undefined,
        },
        "text": Object {
          "styleList": Array [],
          "value": "mockCode",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
